[package]
authors = ["Augustus Mayo <gusmayo@gmail.com>"]
name = "masquerade"
version = "0.1.0"

[dependencies]
actix = "0.7.4"
actix-web = "0.7.8"
base64 = "0.9.0"
bson = "0.11.1"
bytes = "0.4.7"
env_logger = "0.5.6"
futures = "0.1.18"
http = "0.1.5"
log = "0.4.1"
ring = "0.13.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tokio = "0.1.6"
uuid = { version = "0.6.3", features = ["v4"] }

[dependencies.hyper]
optional = true
version = "0.10"

[dependencies.mongo_driver]
optional = true
version = "0.12.0"

[dependencies.redis]
optional = true
version = "0.8.0"

[dependencies.rusoto_core]
optional = true
version = "0.31.0"

[dependencies.rusoto_credential]
optional = true
version = "0.10.0"

[dependencies.rusoto_dynamodb]
optional = true
version = "0.31.0"

[features]
dynamo-backend = [
    "hyper",
    "rusoto_core",
    "rusoto_credential",
    "rusoto_dynamodb",
]
mem-backend = []
mongo-backend = ["mongo_driver"]
redis-backend = ["redis"]
