[package]
authors = ["Augustus Mayo <gusmayo@gmail.com>"]
name = "masquerade"
version = "0.1.0"

[dependencies]
actix = "0.7.5"
actix-web = "0.7.13"
base64 = "0.9.0"
bson = "0.11.1"
bytes = "0.4.7"
env_logger = "0.5.6"
futures = "0.1.18"
http = "0.1.5"
jsonwebtoken = "5.0.1"
log = "0.4.1"
redis = "0.9.1"
redis-async = "0.4.3"
ring = "0.13.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tokio = "0.1.6"

[dependencies.uuid]
features = ["v4"]
version = "0.6.3"
