[package]
authors = ["Augustus Mayo <gusmayo@gmail.com>"]
edition = "2018"
name = "masquerade"
version = "0.1.0"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
base64 = "0.9.0"
bson = "0.11.1"
bytes = "0.4.7"
config = "0.9.1"
env_logger = "0.5.6"
futures = "0.1.18"
hashbrown = "0.1.7"
http = "0.1.5"
jsonwebtoken = "5.0.1"
parking_lot = "0.7.0"
redis-async = "0.4.3"
ring = "0.13.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
structopt = "0.2.14"
tokio = "0.1.6"

[dependencies.log]
features = ["serde"]
version = "0.4.6"

[dependencies.uuid]
features = ["v4"]
version = "0.6.3"
